# AIProductivityApp

./: .dockerignore  .env.example  AUTH_FIX_SUMMARY.md  AUTH_IMPLEMENTATION_PLAN.md  BACKEND_COMPLETE_SUMMARY.md  BUG_FIXES_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_FIX_GUIDE.md  DESIGN_PLAN.md  DESIGN_SYSTEM.md  Dockerfile  EMBEDDING_FIX_COMPLETE.md  FIXES_SUMMARY.md  FRONTEND_API_REFERENCE.md  FRONTEND_EXECUTION_PLAN.md  NETWORK_ERROR_FIX.md  PHASE1_GUIDE.md  QUICK_FIX_GUIDE.md  README.md  SESSION_SUMMARY.md  TESTING_GUIDE.md  TEST_AUTH_FIX.md  alembic.ini  bash.exe.stackdump  cookies.txt  create_test_db.py  docker-compose.yml  fix_alembic_version.sql  init_db.py  make_admin.py  pyproject.toml  pytest.ini  railway.toml  requirements.txt  reset_db.py  run-migration.bat  start-backend.bat
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 2a3b4c5d6e7f_add_pgvector_support.py  9f35117a7d03_initial_schema_clean_start.py  a1b2c3d4e5f6_remove_embedding_column.py
app/: main.py
app/core/: config.py  dependencies.py  exceptions.py  logging_config.py  security.py
app/db/: database.py
app/middleware/: __init__.py  error_handler.py  logging_middleware.py
app/models/: __init__.py  category.py  refresh_token.py  tag.py  task.py  user.py
app/schemas/: ai_task.py  analytics.py  categories.py  tag.py  task.py  user.py
app/services/: ai_task_parser.py  analytics_service.py  email_service.py  (+2 more)
frontend/: .env.example  .env.local  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  start-frontend.bat  tailwind.config.ts
tests/: conftest.py  test_advanced_filtering.py  test_auth.py  test_complete_flow.py  test_phase1.py  test_phase2.py  test_task_views.py
(+93 files in other folders)
