[project]
name = "fastapi-project"
version = "1.0.0"
description = "Production-ready Task Manager API with AI-powered features"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi>=0.118.0",
    "pydantic[email]>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",

    # Database
    "sqlalchemy>=2.0.43",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.17.2",

    # Authentication & Security
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "bcrypt==4.0.1",
    "passlib[bcrypt]==1.7.4",

    # External APIs
    "groq>=1.0.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",

    # Phase 1: Logging, Monitoring & Security
    "loguru>=0.7.2",
    "sentry-sdk[fastapi]>=1.40.0",
    "slowapi>=0.1.9",

    # Phase 1: Testing Infrastructure
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "faker>=22.0.0",
    "respx>=0.20.0",

    # Phase 2: AI/ML for Semantic Search & Priority Suggestions
    "sentence-transformers>=2.3.0",
    "torch>=2.1.0",
    "pgvector>=0.2.4",
    "numpy>=1.24.0",
]
